--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
                 </ul>
                 <!-- Social Media -->
                 <div class="d-flex mt-3 ms-3 mt-md-0 ms-md-0">
-                    <a href="https://facebook.com/pustaka.koding" target="_blank" class="btn btn-social-media me-3">
-                        <i class="bi bi-facebook"></i>
+                    <a href="https://id.linkedin.com/in/novan-ardiansah-9855b026b" target="_blank" class="btn btn-social-media me-3">
+                        <i class="bi bi-linkedin"></i>
                     </a>
-                    <a href="https://www.instagram.com/pustakakoding/" target="_blank"
+                    <a href="https://www.instagram.com/novan.r.ardiyansah/" target="_blank"
                         class="btn btn-social-media me-3">
                         <i class="bi bi-instagram"></i>
                     </a>
-                    <a href="https://www.youtube.com/channel/UCbgv9z5lRwtXX_lUZ5-x8Ew" target="_blank"
+                    <a href="https://www.youtube.com/@JamasPython" target="_blank"
                         class="btn btn-social-media me-3">
                         <i class="bi bi-youtube"></i>
                     </a>
-                    <a href="https://github.com/pustakakoding" target="_blank" class="btn btn-social-media">
+                    <a href="https://github.com/rusdy-cyber" target="_blank" class="btn btn-social-media">
                         <i class="bi bi-github"></i>
                     </a>
                 </div>
@@ -94,7 +94,8 @@
                         loading="lazy">
                 </div>
                 <div class="col-lg-7">
-                    <h1 class="fw lh-2 mb-4">Saya suka coding! Berusaha & Ambisius. Saya suka berbagai macam
+                    <h1 class="fw lh-2 mb-4">Saya sangat suka coding! saya Berusaha keras & Ambisius. Saya suka berbagai
+                        macam
                         Software Engineering yang mencakup Frontend, Backend, dan DevOps</p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                             <a href="https://api.whatsapp.com/send?phone=&text=Assalamualaikum.."
