--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
                         class="btn btn-social-media me-3">
                         <i class="bi bi-youtube"></i>
                     </a>
-                    <a href="https://github.com/rusdy-cyber" target="_blank" class="btn btn-social-media">
+                    <a href="https://github.com/rusdy-cyber" target="_blank" class="btn btn-social-media me-3">
                         <i class="bi bi-github"></i>
+                    </a>
+                    <a href="https://g.dev/rusdi" target="_blank" class="btn btn-social-media">
+                        <i class="bi bi-google-play"></i>
                     </a>
                 </div>
             </div>
