--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a class="nav-link mx-3" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-3" href="#services">Services</a>
+                        <a class="nav-link mx-3" href="#services">Skil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-3" href="#about">About</a>
@@ -65,15 +65,15 @@
                 </ul>
                 <!-- Social Media -->
                 <div class="d-flex mt-3 ms-3 mt-md-0 ms-md-0">
-                    <a href="https://id.linkedin.com/in/novan-ardiansah-9855b026b" target="_blank" class="btn btn-social-media me-3">
+                    <a href="https://id.linkedin.com/in/novan-ardiansah-9855b026b" target="_blank"
+                        class="btn btn-social-media me-3">
                         <i class="bi bi-linkedin"></i>
                     </a>
                     <a href="https://www.instagram.com/novan.r.ardiyansah/" target="_blank"
                         class="btn btn-social-media me-3">
                         <i class="bi bi-instagram"></i>
                     </a>
-                    <a href="https://www.youtube.com/@JamasPython" target="_blank"
-                        class="btn btn-social-media me-3">
+                    <a href="https://www.youtube.com/@JamasPython" target="_blank" class="btn btn-social-media me-3">
                         <i class="bi bi-youtube"></i>
                     </a>
                     <a href="https://github.com/rusdy-cyber" target="_blank" class="btn btn-social-media me-3">
@@ -113,9 +113,8 @@
         <div id="services" class="container text-center py-5">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h3 class="fw-bold lh-2 mb-3">OUR SERVICES</h3>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                        euismod tincidunt ut laoreet dolore magna.</p>
+                    <h3 class="fw-bold lh-2 mb-3">PENGEMBANGAN DIRI</h3>
+                    <p class="lead">Seseorang yang sedang merangkak melatih skil dan pemahaman di dunia maya.</p>
                 </div>
             </div>
 
@@ -127,7 +126,7 @@
                                 <i class="bi-filetype-html"></i>
                             </div>
                             <h3>Web Design</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.</p>
+                            <p>Mempelajari dan melatih skil penggunnaan figma.</p>
                         </div>
                     </div>
                 </div>
@@ -138,7 +137,7 @@
                                 <i class="bi-code-slash"></i>
                             </div>
                             <h3>Web Development</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.</p>
+                            <p>Mempelajari da melatih skil membangun website sistem informasi dan web api.</p>
                         </div>
                     </div>
                 </div>
@@ -146,10 +145,10 @@
                     <div class="card border-0 rounded-4 shadow-sm">
                         <div class="card-body p-3 p-sm-5">
                             <div class="feature-icon-1 bg-primary bg-gradient mb-4">
-                                <i class="bi-display"></i>
+                                <i class="bi-google-play"></i>
                             </div>
-                            <h3>Digital Marketing</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy.</p>
+                            <h3>Mobile Development</h3>
+                            <p>Mempelajari da melatih skil membangun aplikasi.</p>
                         </div>
                     </div>
                 </div>
@@ -161,8 +160,8 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h3 class="fw-bold lh-2 mb-3">ABOUT US</h3>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                        euismod tincidunt ut laoreet dolore magna.</p>
+                    <p class="lead">Assalamualaikum, saya Seorang mahasiswa politeknik dengan tujuan gelar STR.com
+                        membangun dan melatih pemahaman dan skil di dunia kumputer.</p>
                 </div>
             </div>
 
@@ -193,8 +192,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h3 class="fw-bold lh-2 mb-3">OUR PORTFOLIO</h3>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                        euismod tincidunt ut laoreet dolore magna.</p>
+                    <p class="lead">Projek yang sedang di kembangkan.</p>
                 </div>
             </div>
 
@@ -291,8 +289,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h3 class="fw-bold lh-2 mb-3">CONTACT US</h3>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                        euismod tincidunt ut laoreet dolore magna.</p>
+                    <p class="lead">Hubungi saya jika ada keperluan.</p>
                 </div>
             </div>
 
@@ -322,7 +319,7 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">WhatsApp</h5>
-                                    <p>+62 8</p>
+                                    <p>tiger_cyber@proton.me</p>
                                 </div>
                             </div>
                             <hr class="hr-dotted mt-0">
@@ -332,7 +329,7 @@
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">Email</h5>
-                                    <p>@gmail.com</p>
+                                    <p>tiger_cyber@proton.me</p>
                                 </div>
                             </div>
                             <hr class="hr-dotted mt-0">
